--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Pau Fernández (pauek)
 
 <ul class="posts nobullet">
   {% for post in site.posts %}
-  <li><span>{{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
+  <li><span class="date">{{ post.date | date: "%b %Y" }}</span><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
 
