Quito C++ de la descripción del canal de YouTube

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Pau Fernández (pauek)
 </p>
 
 <ul class="nobullet">
-  <li><a href="http://www.youtube.com/paueky">Mi canal en YouTube</a>, vídeos cortos sobre programación en C++.</li>
+  <li><a href="http://www.youtube.com/paueky">Mi canal en YouTube</a>, vídeos cortos sobre programación.</li>
   <li>
     <a href="http://minidosis.org">MiniDosis</a>, estructura y documentación para el curso de C++.
     <div class="comment">
