Arreglo un poco el index preparando la llegada de visitantes por 'La Tristesa d'un Proscrit'

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@ title: Pau Fernández (pauek)
 <div id="content">
 <!-- Blog -->
 
+<p>
+Soy profesor a tiempo completo en el Departamento de 
+<a href="http://www.lsi.upc.edu">LSI</a> de la
+<a href="http://www.upc.edu">Universidad Politécnica de Catalunya</a>.
+</p>
+
+
 <h2>Blog</h2>
 
 <ul class="posts nobullet">
