Corrijo la afiliación

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Pau Fernández (pauek)
 
 <p>
 Soy profesor a tiempo completo en el Departamento de 
-<a href="http://www.lsi.upc.edu">LSI</a> de la
+<a href="http://www.cs.upc.edu">Ciencias de la Computación</a> de la
 <a href="http://www.upc.edu">Universidad Politécnica de Catalunya</a>.
 </p>
 
