--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ Soy profesor a tiempo completo en el Departamento de
 
 <h2>Programación</h2>
 <ul class="nobullet">
+  <li><a href="https://github.com/pauek/minicc">MiniCC</a>, un intérprete de C++ para usos pedagógicos.</li>
   <li><a href="https://github.com/pauek/garzon">Garzón</a>, un juez para problemas de programación.</li>
   <li><a href="https://github.com/pauek/miniwin">MiniWin</a>, una librería de gráficos minimalista.
     <div class="comment">
