Correcciones a la página principal

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@ Soy profesor a tiempo completo en el Departamento de
 <h2>Educación</h2>
 <p>
   Doy dos asignaturas sobre C++ en la <a href="http://www.eet.upc.edu/?set_language=es">EET</a>:
-  <a href="http://intranet.eet.upc.edu/?q=guia_docent/320095/2">Fonaments d'Informàtica</a> (FI)
-  i <a href="http://intranet.eet.upc.edu/?q=guia_docent/320099/2">Estructures de Dades i Orientació a Objectes</a> (EDOO).
+  <a href="https://intranet7.eet.upc.edu/guiesdocents/descarregar/320095/ca">Fonaments d'Informàtica</a> (FI) i 
+  <a href="https://intranet7.eet.upc.edu/guiesdocents/descarregar/320099/ca">Estructures de Dades i Orientació a Objectes</a> (EDOO). 
+  Además, doy una 
+  <a href="https://intranet7.eet.upc.edu/guiesdocents/descarregar/320166/ca">optativa sobre Android</a>.
   
-  Todas mis clases estan <a href="http://www.youtube.com/user/paueky">grabadas en vídeo</a>, 
+  Prácticamente todas mis clases estan <a href="http://www.youtube.com/user/paueky">grabadas en vídeo</a>, 
   así como otros temas más divertidos.
 </p>
 
@@ -38,7 +40,9 @@ Soy profesor a tiempo completo en el Departamento de
   <li>
     <a href="http://minidosis.org">MiniDosis</a>, estructura y documentación para el curso de C++.
     <div class="comment">
-      Versiones especiales para <a href="http://minidosis.org/FI">FI</a> y <a href="http://minidosis.org/EDOO">EDOO</a>.
+      Versiones especiales para 
+      <a href="http://www.minidosis.org/#/cursos/FI">FI</a> y 
+      <a href="http://www.minidosis.org/#/cursos/EDOO">EDOO</a>.
     </div>
   </li>
 </ul>
