Sustituyo publicaciones por lista en Google Scholar

--- a/index.html
+++ b/index.html
@@ -69,66 +69,12 @@ Soy profesor a tiempo completo en el Departamento de
 
 <!-- Publicaciones -->
 
-<h2>Ciencia</h2>
-<div class="article">
-  <h3><span class="year">2008</span>Superdiffusion and encounter rates in diluted, low dimensional worlds</h3>
-  <div class="details">
-    Frederic Bartumeus, <strong>Pau Fernández</strong>, M.G.E da Luz, J. Catalan, R.V. Solé and S. A. Levin<br />
-    <em>Eur. Phys. J. Special Topics 157, 157-166 (2008)</em><br />
-    <span class="doi">DOI: <a href="http://dx.doi.org/10.1140/epjst/e2008-00638-6">10.1140/epjst/e2008-00638-6</a><br /></span>
-  </div>
-</div>
-<div class="article">
-  <h3><span class="year">2007</span>Neutral Landscapes in Signaling Networks</h3>
-  <div class="details">
-    <strong>Pau Fernández</strong> and Ricard V. Solé<br />
-    <em>Proc. Roy. Soc. Interface 4(12), 41-47 (2007)</em><br />
-    <span class="doi">DOI: <a href="http://dx.doi.org/10.1098/rsif.2006.0152">10.1098/rsif.2006.0152</a><br />
-  </div>
-</div>
-<div class="article">
-  <h3><span class="year">2006</span>The Role of Computation in Complex Regulatory Networks</h3>
-  <div class="details">
-    <strong>Pau Fernández</strong> and Ricard V. Solé<br />
-    <em>in Scale-free Networks and Genome Biology, E. Koonin et al (eds.), Landes Bioscience, pp. 206-225 (2006)</em><br />
-    <a href="http://eurekah.com/abstract.php?chapid=2422&amp;bookid=163&amp;catid=30">Article</a> | <a href="http://arxiv.org/abs/q-bio.MN/0311012">Q-bio</a><br />
-  </div>
-</div>
-<div class="article">
-  <h3><span class="year">2005</span>Graphs as Models of Large-scale Biochemical Organization</h3>
-  <div class="details">
-    <strong>Pau Fernández</strong> and Ricard V. Solé<br />
-    <em>in Complexity in Chemistry, Biology, and Ecology. D. Bonchev and D. H. Rouvray, eds. Springer, New York 2005, pp. 155-189 (2005)</em><br />
-    
-  </div>
-</div>
-<div class="article">
-  <h3><span class="year">2003</span>Adaptive Walks in a Gene Network Model of Morphogenesis: insights into the Cambrian Explosion</h3>
-  <div class="details">
-    Ricard V. Solé, <strong>Pau Fernández</strong> and Stuart A. Kauffman<br />
-    <em>Int. J. Dev. Biol. 47, 693-701 (2003)</em><br />
-    <a href='http://www.ijdb.ehu.es/abstract.03078/a685.htm'>Article</a> | <a href='http://arxiv.org/abs/q-bio.GN/0311013'>Q-bio</a>
-  </div>
-</div>
-<div class="article">
-  <h3><span class="year">2002</span>Spatial Patterns in Ant Colonies</h3>
-  <div class="details">
-    Guy Theraulaz <em>et al.</em><br />
-    <em>Proc. Natl. Acad. Sci. USA 99, 9645-9649 (2002)</em><br />
-    <span class="doi">DOI: <a href="http://dx.doi.org/10.1073/pnas.152302199">10.1073/pnas.152302199</a><br /></span>
-  </div>
-</div>
-<div class="article">
-  <h3><span class="year">2000</span>Pattern Formation and Optimization in Army Ant Raids</h3>
-  <div class="details">
-    Ricard V. Solé, Eric Bonabeau, Jordi Delgado, <strong>Pau Fernández</strong> and Jesus Marin <br />
-    <em>Artificial Life 6(3), 219-227 (2000)</em> <br />
-    <span class="doi">DOI: <a href="http://dx.doi.org/10.1162/106454600568843">10.1162/106454600568843</a> <br /></span>
-  </div>
-</div>
+<h2>Publicaciones</h2>
+<p>
+  <a href="https://scholar.google.com/citations?user=D-UTJFwAAAAJ&hl=en">Lista de publicaciones</a> en Google Scholar.
+</p>
 
 </div>
-
 
 
 <script>
