Actualizo la página principal

--- a/index.html
+++ b/index.html
@@ -21,35 +21,33 @@ Soy profesor a tiempo completo en el Departamento de
   {% endfor %}
 </ul>
 
-<!-- C++ -->
+<!-- Educación -->
 
-<h2>Educación</h2>
+<h2>Docencia Universitaria</h2>
 <p>
   Doy dos asignaturas sobre C++ en la <a href="http://www.eet.upc.edu/?set_language=es">EET</a>:
   <a href="https://intranet7.eet.upc.edu/guiesdocents/descarregar/320095/ca">Fonaments d'Informàtica</a> (FI) i 
   <a href="https://intranet7.eet.upc.edu/guiesdocents/descarregar/320099/ca">Estructures de Dades i Orientació a Objectes</a> (EDOO). 
   Además, doy una 
-  <a href="https://intranet7.eet.upc.edu/guiesdocents/descarregar/320166/ca">optativa sobre Android</a>.
-  
-  Prácticamente todas mis clases estan <a href="http://www.youtube.com/user/paueky">grabadas en vídeo</a>, 
-  así como otros temas más divertidos.
+  <a href="https://intranet7.eet.upc.edu/guiesdocents/descarregar/320166/ca">optativa sobre Android</a>, 
+  que ahora he empezado a dar en <a href="https://flutter.dev">Flutter</a>.
 </p>
 
+<h2>Educación Online</h2>
 <ul class="nobullet">
-  <li><a href="http://www.youtube.com/paueky">Mi canal en YouTube</a>, vídeos cortos sobre programación.</li>
   <li>
-    <a href="http://minidosis.org">MiniDosis</a>, estructura y documentación para el curso de C++.
-    <div class="comment">
-      Versiones especiales para 
-      <a href="http://www.minidosis.org/#/cursos/FI">FI</a> y 
-      <a href="http://www.minidosis.org/#/cursos/EDOO">EDOO</a>.
-    </div>
+    <a href="http://www.youtube.com/paueky">Mi canal en YouTube</a>, vídeos sobre programación. 
+    Mis clases y otras cosas más divertidas.
+  </li>
+  <li>
+    <a href="http://minidosis.org">Minidosis</a>, una web para aprender en pequeñas 
+    dosis, con los vídeos, documentación, ejercicios, y preguntas de test para C++, Go y Android.
   </li>
 </ul>
 
 <!-- Proyectos -->
 
-<h2>Programación</h2>
+<h2>Proyectos</h2>
 <ul class="nobullet">
   <li><a href="https://github.com/pauek/minicc">MiniCC</a>, un intérprete de C++ para usos pedagógicos.</li>
   <li><a href="https://github.com/pauek/garzon">Garzón</a>, un juez para problemas de programación.</li>
@@ -64,6 +62,7 @@ Soy profesor a tiempo completo en el Departamento de
   </li>
   <li><a href="https://github.com/pauek/CodeBoard">CodeBoard</a>, una pizarra de código fuente en tiempo real.</li>
   <li><a href="https://github.com/pauek/Mecano">Mecano</a>, un lenguaje experimental.</li>
+
   <li><a href="https://github.com/pauek/arc-sbcl">arc-sbcl</a>, <a href="http://arclanguage.org">arc</a> implementado en <a href="http://www.sbcl.org/">SBCL</a>.</li>
 </ul>
 
