--- a/index.html
+++ b/index.html
@@ -7,10 +7,64 @@ title: Pau Fernández (pauek)
 <!-- Blog -->
 
 <p>
-Soy profesor a tiempo completo en el Departamento de 
-<a href="http://www.cs.upc.edu">Ciencias de la Computación</a> de la
-<a href="http://www.upc.edu">Universidad Politécnica de Catalunya</a>.
+  <span class="role">Co-director</span> del <a href="https://bit.ly/2Nc8NRv">Posgrado en Full-Stack Web Technologies</a>, 
+  en <a href="http://talent.upc.edu">UPC School</a>.
 </p>
+    
+<p>
+  <span class="role">Profesor a tiempo completo</span> en el
+  <a href="http://www.cs.upc.edu">Departamento de Ciencias de la Computación</a> de la
+  <a href="http://www.upc.edu">Universidad Politécnica de Catalunya</a>.
+</p>
+
+
+
+
+<!-- Educación -->
+
+<h2>Docencia</h2>
+<p>
+  Soy profesor en varias asignaturas sobre programación en <a href="https://eseiaat.upc.edu">ESEIAAT</a> 
+  y el <a href="https://citm.upc.edu">CITM</a>:
+  <ul>
+    <li>
+      <a href="https://www.upc.edu/grau/guiadocent/pdf/esp/320002/fundamentos-de-informatica.pdf">Fonaments d'Informàtica</a> (C++),
+    </li>
+    <li>
+      <a href="https://www.upc.edu/grau/guiadocent/pdf/esp/320099/fundamentos-de-informatica.pdf">Estructures de Dades i Orientació a Objectes</a> (C++),
+    </li>
+    <li>
+      <a href="https://www.upc.edu/grau/guiadocent/pdf/esp/320166/fundamentos-de-informatica.pdf">Programación de Móviles Android</a> (Flutter), 
+    </li>
+    <li>
+      <a href="https://www.upc.edu/content/grau/guiadocent/pdf/en/205216">Web Applications</a> (Javascript + NodeJS),
+    </li>
+    <li>
+      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804131&lang=cat">Tecnologías Multimedia Aplicadas VII</a> (Flutter),
+    </li>
+    <li>
+      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804247&lang=cat">Dispositivos Móbiles</a> (Flutter),
+    </li>
+    <li>
+      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804125&lang=cat">Aplicaciones Web de Última Generación I</a> (Javascript + React),
+    </li>
+    <li>
+      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804127&lang=cat">Aplicaciones Web de Última Generación III</a> (React Native),
+    </li>
+  </ul>
+</p>
+
+<h2>Educación</h2>
+<ul class="nobullet">
+  <li>
+    <a href="http://www.youtube.com/paueky">Mi canal en YouTube</a>, vídeos sobre programación. 
+    Muchas de mis clases y otras cosas más divertidas.
+  </li>
+  <li>
+    <a href="http://minidosis.org">Minidosis</a>, una web para aprender en pequeñas 
+    dosis, con los vídeos, documentación, ejercicios, y preguntas de test para C++, Go y Android.
+  </li>
+</ul>
 
 
 <h2>Blog</h2>
@@ -21,49 +75,44 @@ Soy profesor a tiempo completo en el Departamento de
   {% endfor %}
 </ul>
 
-<!-- Educación -->
-
-<h2>Docencia Universitaria</h2>
-<p>
-  Doy dos asignaturas sobre C++ en la <a href="http://www.eet.upc.edu/?set_language=es">EET</a>:
-  <a href="https://intranet7.eet.upc.edu/guiesdocents/descarregar/320095/ca">Fonaments d'Informàtica</a> (FI) i 
-  <a href="https://intranet7.eet.upc.edu/guiesdocents/descarregar/320099/ca">Estructures de Dades i Orientació a Objectes</a> (EDOO). 
-  Además, doy una 
-  <a href="https://intranet7.eet.upc.edu/guiesdocents/descarregar/320166/ca">optativa sobre Android</a>, 
-  que ahora he empezado a dar en <a href="https://flutter.dev">Flutter</a>.
-</p>
-
-<h2>Educación Online</h2>
-<ul class="nobullet">
-  <li>
-    <a href="http://www.youtube.com/paueky">Mi canal en YouTube</a>, vídeos sobre programación. 
-    Mis clases y otras cosas más divertidas.
-  </li>
-  <li>
-    <a href="http://minidosis.org">Minidosis</a>, una web para aprender en pequeñas 
-    dosis, con los vídeos, documentación, ejercicios, y preguntas de test para C++, Go y Android.
-  </li>
-</ul>
 
 <!-- Proyectos -->
 
-<h2>Proyectos</h2>
+<h2>Código</h2>
 <ul class="nobullet">
-  <li><a href="https://github.com/pauek/minicc">MiniCC</a>, un intérprete de C++ para usos pedagógicos.</li>
-  <li><a href="https://github.com/pauek/garzon">Garzón</a>, un juez para problemas de programación.</li>
-  <li><a href="https://github.com/pauek/miniwin">MiniWin</a>, una librería de gráficos minimalista.
+  <li>
+    <a href="https://github.com/pauek/norvig-sudoku">Implementación en C++</a> del 
+    <a href="https://norvig.com/sudoku.html">solucionador de Sudokus de Peter Norvig</a>
+  </li>
+  <li>
+    <a href="https://github.com/pauek/SpeakerFeedback">SpeakerFeedback</a>, 
+    una <i>app</i> Android para votación de preguntas a un conferenciante, usando Firebase.
+  </li>
+  <li>
+    <a href="https://github.com/pauek/Ejemplos-Android">Ejemplos Android</a>, respositorio con aplicaciones Android de ejemplo.
+  </li>
+  <li>
+    <a href="https://github.com/pauek/minicc">MiniCC</a>, un intérprete de C++ para usos pedagógicos.</li>
+  <li>
+    <a href="https://github.com/pauek/garzon">Garzón</a>, un juez para problemas de programación.</li>
+  <li>
+    <a href="https://github.com/pauek/miniwin">MiniWin</a>, una librería de gráficos minimalista.
     <div class="comment">
-      <a href="http://miniwin.readthedocs.org/en/latest/">Documentación</a> y 
-      ejemplos: 
+      <a href="http://miniwin.readthedocs.org/en/latest/">Documentación</a> y ejemplos: 
       <a href="http://youtu.be/hSUtZowDDYk">pelotita con gravedad</a>, 
       <a href="http://www.youtube.com/playlist?list=PLBF37E6885CD3A358">Tetris</a>, 
       <a href="http://www.youtube.com/playlist?list=PLDD6B727E5B6B5E33">Asteroids</a>.
     </div>
   </li>
-  <li><a href="https://github.com/pauek/CodeBoard">CodeBoard</a>, una pizarra de código fuente en tiempo real.</li>
-  <li><a href="https://github.com/pauek/Mecano">Mecano</a>, un lenguaje experimental.</li>
-
-  <li><a href="https://github.com/pauek/arc-sbcl">arc-sbcl</a>, <a href="http://arclanguage.org">arc</a> implementado en <a href="http://www.sbcl.org/">SBCL</a>.</li>
+  <li>
+    <a href="https://github.com/pauek/CodeBoard">CodeBoard</a>, una pizarra de código fuente en tiempo real.
+  </li>
+  <li>
+    <a href="https://github.com/pauek/Mecano">Mecano</a>, un lenguaje experimental.
+  </li>
+  <li>
+    <a href="https://github.com/pauek/arc-sbcl">arc-sbcl</a>, <a href="http://arclanguage.org">arc</a> implementado en <a href="http://www.sbcl.org/">SBCL</a>.
+  </li>
 </ul>
 
 <!-- Publicaciones -->
