Retoco para que quede bien en móvil

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@ title: Pau Fernández (pauek)
 </p>
 
 
-
-
 <!-- Educación -->
 
 <h2>Docencia</h2>
@@ -46,10 +44,10 @@ title: Pau Fernández (pauek)
       <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804247&lang=esp">Dispositivos Móviles</a> (Flutter),
     </li>
     <li>
-      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804125&lang=esp">Aplicaciones Web de Última Generación I</a> (Javascript + React),
+      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804125&lang=esp">Aplic. Web de Última Generación I</a> (React),
     </li>
     <li>
-      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804127&lang=esp">Aplicaciones Web de Última Generación III</a> (React Native),
+      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804127&lang=esp">Aplic. Web de Última Generación III</a> (React Native),
     </li>
   </ul>
 </p>
