--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@ title: Pau Fernández (pauek)
     </div>
   </li>
   <li>
-    <a href="https://github.com/pauek/minicc">MiniCC</a>, un intérprete de C++ para usos pedagógicos.</li>
+    <a href="https://github.com/pauek/minicc">MiniCC</a>, un intérprete de C++ para usos pedagógicos.
+  </li>
+  <li>
+    <a href="https://github.com/pauek/Kwidgin">Kwidgin</a>, generador de preguntas de test permutadas.
+  </li>
   <li>
     <a href="https://github.com/pauek/SpeakerFeedback">SpeakerFeedback</a>, 
     una <i>app</i> Android para votación de preguntas a un conferenciante, usando Firebase.
