Upgraded all links to HTTPS

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ title: Pau Fernández (pauek)
 
 <p>
   <span class="role">Co-director</span> del <a href="https://bit.ly/2Nc8NRv">Posgrado en Full-Stack Web Technologies</a>, 
-  en <a href="http://talent.upc.edu">UPC School</a>.
+  en <a href="https://talent.upc.edu">UPC School</a>.
 </p>
     
 <p>
   <span class="role">Profesor</span> a tiempo completo en el
-  <a href="http://www.cs.upc.edu">Departamento de Ciencias de la Computación</a> de la
-  <a href="http://www.upc.edu">Universidad Politécnica de Catalunya</a>.
+  <a href="https://www.cs.upc.edu">Departamento de Ciencias de la Computación</a> de la
+  <a href="https://www.upc.edu">Universidad Politécnica de Catalunya</a>.
 </p>
 
 
@@ -38,16 +38,16 @@ title: Pau Fernández (pauek)
       <a href="https://www.upc.edu/content/grau/guiadocent/pdf/en/205216">Web Applications</a> (Javascript + NodeJS),
     </li>
     <li>
-      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804131&lang=esp">Tecnologías Multimedia Aplicadas VII</a> (Flutter),
+      <a href="https://www.upc.edu/estudispdf/guia_docent.php?codi=804131&lang=esp">Tecnologías Multimedia Aplicadas VII</a> (Flutter),
     </li>
     <li>
-      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804247&lang=esp">Dispositivos Móviles</a> (Flutter),
+      <a href="https://www.upc.edu/estudispdf/guia_docent.php?codi=804247&lang=esp">Dispositivos Móviles</a> (Flutter),
     </li>
     <li>
-      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804125&lang=esp">Aplic. Web de Última Generación I</a> (React),
+      <a href="https://www.upc.edu/estudispdf/guia_docent.php?codi=804125&lang=esp">Aplic. Web de Última Generación I</a> (React),
     </li>
     <li>
-      <a href="http://www.upc.edu/estudispdf/guia_docent.php?codi=804127&lang=esp">Aplic. Web de Última Generación III</a> (React Native),
+      <a href="https://www.upc.edu/estudispdf/guia_docent.php?codi=804127&lang=esp">Aplic. Web de Última Generación III</a> (React Native),
     </li>
   </ul>
 </p>
@@ -55,11 +55,11 @@ title: Pau Fernández (pauek)
 <h2>Educación</h2>
 <ul class="nobullet">
   <li>
-    <a href="http://www.youtube.com/paueky">Mi canal en YouTube</a>, vídeos sobre programación. 
+    <a href="https://www.youtube.com/paueky">Mi canal en YouTube</a>, vídeos sobre programación. 
     Muchas de mis clases y otras cosas más divertidas.
   </li>
   <li>
-    <a href="http://minidosis.org">Minidosis</a>, una web para aprender en pequeñas 
+    <a href="https://minidosis.org">Minidosis</a>, una web para aprender en pequeñas 
     dosis, con los vídeos, documentación, ejercicios, y preguntas de test para C++, Go y Android.
   </li>
 </ul>
@@ -94,10 +94,10 @@ title: Pau Fernández (pauek)
   <li>
     <a href="https://github.com/pauek/miniwin">MiniWin</a>, una librería de gráficos minimalista.
     <div class="comment">
-      <a href="http://miniwin.readthedocs.org/en/latest/">Documentación</a> y ejemplos: 
-      <a href="http://youtu.be/hSUtZowDDYk">pelotita con gravedad</a>, 
-      <a href="http://www.youtube.com/playlist?list=PLBF37E6885CD3A358">Tetris</a>, 
-      <a href="http://www.youtube.com/playlist?list=PLDD6B727E5B6B5E33">Asteroids</a>.
+      <a href="https://miniwin.readthedocs.org/en/latest/">Documentación</a> y ejemplos: 
+      <a href="https://youtu.be/hSUtZowDDYk">pelotita con gravedad</a>, 
+      <a href="https://www.youtube.com/playlist?list=PLBF37E6885CD3A358">Tetris</a>, 
+      <a href="https://www.youtube.com/playlist?list=PLDD6B727E5B6B5E33">Asteroids</a>.
     </div>
   </li>
   <li>
@@ -123,7 +123,7 @@ title: Pau Fernández (pauek)
     <a href="https://github.com/pauek/Mecano">Mecano</a>, un lenguaje experimental.
   </li>
   <li>
-    <a href="https://github.com/pauek/arc-sbcl">arc-sbcl</a>, <a href="http://arclanguage.org">arc</a> implementado en <a href="http://www.sbcl.org/">SBCL</a>.
+    <a href="https://github.com/pauek/arc-sbcl">arc-sbcl</a>, <a href="https://arclanguage.org">arc</a> implementado en <a href="https://www.sbcl.org/">SBCL</a>.
   </li>
 </ul>
 
